--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -193,23 +193,23 @@ body{
 @media (min-width: 768px) { 
 	
 	.title{
-		font-size: 2rem;
+		font-size: 4rem;
 	}
 	.subtitle{
-		font-size: 1.5rem;
+		font-size: 3rem;
 	}
 	.instruction{
-		font-size: 1.5rem;
+		font-size: 3rem;
 	}
 	.icon{
-		font-size: 1.5rem;
+		font-size: 3rem;
 	}
 	.card-container{
 		flex-direction: column;
 	}
 	.circle{
-		height: 3rem;
-		width: 3rem;
+		height: 6rem;
+		width: 6rem;
 	}
 	.card-container{
 		justify-content: flex-end;
@@ -226,20 +226,20 @@ body{
    ------------------------------------------------------------------------- */
 @media (min-width: 1024px) {
 	.title{
-		font-size: 3.5rem;
+		font-size: 2rem;
 	}
 	.subtitle{
-		font-size: 2.5rem;
+		font-size: 1.5rem;
 	}
 	.instruction{
-		font-size: 2rem;
+		font-size: 1rem;
 	}
 	.icon{
-		font-size: 2rem;
+		font-size: 1rem;
 	}
 	.circle{
-		height: 4rem;
-		width: 4rem;
+		height: 2rem;
+		width: 2rem;
 	}
 	.card-container{
 		justify-content: flex-start;
@@ -256,5 +256,32 @@ body{
 /* Escritorios muy anchos
    ------------------------------------------------------------------------- */
 @media (min-width: 1200px) {
-	/* body ... */
+	.title{
+		font-size: 1rem;
+	}
+	.subtitle{
+		font-size: 1rem;
+	}
+	.instruction{
+		font-size: 1rem;
+	}
+	.icon{
+		font-size: 1rem;
+	}
+	.card-container{
+		flex-direction: column;
+	}
+	.circle{
+		height: 1.5rem;
+		width: 1.5rem;
+	}
+	.card-container{
+		justify-content: flex-end;
+	}
+	.card-message{
+		padding: 1rem;
+		font-size: 1rem;
+		width: 50%;
+		margin-left: -1rem;
+	}	
 }
