--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -121,23 +121,23 @@ body{
 @media (min-width: 768px) { 
 	
 	.title{
-		font-size: 4rem;
+		font-size: 2rem;
 	}
 	.subtitle{
-		font-size: 3rem;
+		font-size: 1.5rem;
 	}
 	.instruction{
-		font-size: 3rem;
+		font-size: 1.5rem;
 	}
 	.icon{
-		font-size: 3rem;
+		font-size: 1.5rem;
 	}
 	.card-container{
 		flex-direction: column;
 	}
 	.circle{
-		height: 6rem;
-		width: 6rem;
+		height: 3rem;
+		width: 3rem;
 	}
 	.card-container{
 		justify-content: flex-end;
@@ -185,31 +185,29 @@ body{
    ------------------------------------------------------------------------- */
 @media (min-width: 1200px) {
 	.title{
-		font-size: 1rem;
+		font-size: 3rem;
 	}
 	.subtitle{
-		font-size: 1rem;
+		font-size: 2rem;
 	}
 	.instruction{
-		font-size: 1rem;
+		font-size: 1.5rem;
 	}
 	.icon{
-		font-size: 1rem;
-	}
-	.card-container{
-		flex-direction: column;
+		font-size: 1.5rem;
 	}
 	.circle{
-		height: 1.5rem;
-		width: 1.5rem;
+		height: 3rem;
+		width: 3rem;
 	}
 	.card-container{
-		justify-content: flex-end;
+		justify-content: flex-start;
+		align-items: flex-end;
 	}
 	.card-message{
 		padding: 1rem;
 		font-size: 1rem;
-		width: 50%;
+		width: 25%;
 		margin-left: -1rem;
 	}	
 }
